Doc tweaks